examples/test/testpolicy7567.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7567
  namespace: namespace237
spec:
  podSelector:
    matchLabels:
      key48: value35
      key30: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value44
          key26: value33
          key13: value49
      podSelector:
        matchLabels:
          key10: value14
          key36: value21
          key23: value23
